--- a/www.mckinsey.com/index.html
+++ b/www.mckinsey.com/index.html
@@ -26,16 +26,7 @@
             class="mck-c-hwpm mdc-u-grid mdc-u-grid-gutter-xxs mck-o-edge-to-edge HeroWithPartnershipMark_mck-c-hwpm__nHBOY HeroWithPartnershipMark_mck-c-hwpm--left-aligned__tS_YR HeroWithPartnershipMark_mck-c-hwpm--centered__OkG_L mck-c-hwpm--with-highlight-bar"
             data-testid="hwpm-root-container"
           >
-            <style>
-              @media screen and (min-width: 58rem) and (orientation: landscape) {
-                .mck-c-hwpm {
-                  min-height: calc(100vh - 0px);
-                }
-              }
-            </style>
-            <div
-              class="mdc-c-bg-image___GJdv1_efa2c78 background-image-hwpm-bg-8d609a59-925b-483d-85e8-910ddee1f22a HeroWithPartnershipMark_mck-c-hwpm__bg-image__Es20m mck-c-hwpm__bg-image--low background-image-382e0a16-6ff8-4439-b586-be974af3ba70-one"
-            ></div>
+            
             <div
               class="mck-o-container-xxxl HeroWithPartnershipMark_mck-c-hwpm__content-block__n4z_H"
             >
@@ -104,6 +95,9 @@
                   </div>
                 </div>
               </div>
+              <div
+              class="mdc-c-bg-image___GJdv1_efa2c78 background-image-hwpm-bg-8d609a59-925b-483d-85e8-910ddee1f22a HeroWithPartnershipMark_mck-c-hwpm__bg-image__Es20m mck-c-hwpm__bg-image--low background-image-382e0a16-6ff8-4439-b586-be974af3ba70-one"
+            ></div>
             </div>
           </div>
           <div
@@ -272,10 +266,11 @@
                               <div
                                 class="mck-u-links-inline mck-c-generic-item__description"
                               >
-                              The Italian luxury brand’s North American CEO, Massimo Caronna,
-                              shares how strategic supply chain investments and a contrarian
-                              approach to growth will keep it around longer than any trend
-                              cycle.
+                                The Italian luxury brand’s North American CEO,
+                                Massimo Caronna, shares how strategic supply
+                                chain investments and a contrarian approach to
+                                growth will keep it around longer than any trend
+                                cycle.
                               </div>
                             </div>
                             <div
@@ -346,11 +341,8 @@
                               class="mdc-c-heading___0fM1W_efa2c78 mdc-u-ts-2"
                             >
                               <div>
-                                Author Talks: Ron
-                                Shaich shares
-                                leadership lessons on
-                                what matters most and
-                                why
+                                Author Talks: Ron Shaich shares leadership
+                                lessons on what matters most and why
                               </div>
                             </h3>
                             <div
@@ -359,9 +351,9 @@
                               <div
                                 class="mck-u-links-inline mck-c-generic-item__description"
                               >
-                              Ron Shaich, founder of Panera Bread and Au Bon Pain, explains
-                              why discovery, innovation, and transformation pave the way to
-                              success.
+                                Ron Shaich, founder of Panera Bread and Au Bon
+                                Pain, explains why discovery, innovation, and
+                                transformation pave the way to success.
                               </div>
                             </div>
                             <div
@@ -457,9 +449,10 @@
                               <div
                                 class="mck-u-links-inline mck-c-generic-item__description"
                               >
-                              COP28 is a significant moment for the global community to
-                              collaborate on bold actions that can accelerate progress
-                              measured in months, not decades.
+                                COP28 is a significant moment for the global
+                                community to collaborate on bold actions that
+                                can accelerate progress measured in months, not
+                                decades.
                               </div>
                             </div>
                             <div
@@ -559,7 +552,8 @@
                       <a
                         href="/about-us/new-at-mckinsey-blog/mhi-unveils-investment-case-for-closing-the-womens-health-gap"
                         class="BlogFeature_mck-c-blog-feature__blog-link__tOUkg mck-c-blog-feature__blog-link--blog-2 mdc-u-grid-gutter-xxs mdc-c-link___lBbY1_efa2c78"
-                        ><div
+                      >
+                        <div
                           class="BlogFeature_mck-c-blog-feature__blog-background__Zx0CC mck-c-blog-feature__blog-background--blog-2 background-image-382e0a16-6ff8-4439-b586-be974af3ba70-four-one"
                         >
                           <style></style>
@@ -645,7 +639,7 @@
                       >
                     </div>
                     <div
-                      class="BlogFeature_mck-c-blog-feature__blog-item__csFZm BlogFeature_mck-c-blog-feature__blog-item--blog-4__NL9YH background-image-382e0a16-6ff8-4439-b586-be974af3ba70-four-one"
+                      class="BlogFeature_mck-c-blog-feature__blog-item__csFZm BlogFeature_mck-c-blog-feature__blog-item--blog-4__NL9YH background-image-382e0a16-6ff8-4439-b586-be974af3ba70-four-two"
                     >
                       <a
                         href="/about-us/new-at-mckinsey-blog/mckinsey-expands-alliance-with-sap-to-accelerate-generative-ai-enabled-transformation"
@@ -654,6 +648,11 @@
                           class="BlogFeature_mck-c-blog-feature__blog-background__Zx0CC BlogFeature_mck-c-blog-feature__blog-background--blog-4__bLP1f"
                           style="background-color: red"
                         >
+                        <p>October 3, 2023</p>
+                          <div>
+                            McKinsey leaders herald new horizon of customer
+                            experience at Dreamforce 2023
+                          </div>
                           <style></style>
                           <div
                             class="mdc-c-bg-image___GJdv1_efa2c78 background-image-0f75a727-da41-4f20-9904-9f785e2d6b59"
@@ -776,13 +775,15 @@
                       data-testid="generic-items"
                     >
                       <div
-                        class="mdc-u-grid mdc-u-grid-gutter-xl mdc-u-grid-col-sm-1 mdc-u-grid--align-start GenericItem_mck-c-generic-item__sGwKL GenericItem_mck-c-generic-item--1by1__6krte"
+                        class="mdc-u-grid mdc-u-grid-gutter-xl mdc-u-grid-col-sm-1 mdc-u-grid--align-start GenericItem_mck-c-generic-item__sGwKL GenericItem_mck-c-generic-item--1by1__6krte
+                        "
                         data-testid="generic-item"
                       >
                         <div
-                          class="video-wrapper VideoComponent_mck-c-video-component__K3_eG"
+                          class="video-wrapper VideoComponent_mck-c-video-component__K3_eG
+                          background-image-382e0a16-6ff8-4439-b586-be974af3ba70-five-one"
                         >
-                          <video
+                          <!-- <video
                             src="https://www.figma.com/proto/vVi1G4vwqkU5SwQNjPaNGT/MWVentureship?type=design&node-id=1-7&t=608MezJM2Vh4IlQ3-0&scaling=min-zoom&page-id=0%3A1"
                             id="bc-video-6312093379112"
                             data-video-id="6312093379112"
@@ -792,7 +793,7 @@
                             data-application-id=""
                             class="video-js GenericItem_mck-c-generic-item__video-component__X8kCu"
                             controls=""
-                          ></video>
+                          ></video> -->
                         </div>
                         <div
                           class="mdc-c-content-block___7p6Lu_efa2c78 mdc-u-grid-gutter-xs GenericItem_mck-c-generic-item__content__gq1m0"
